--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
        <div class="top-slide-container">
             <div class="top-slide" id="myslide">
                 <div class="myslides" style="display: block;">
-                    <img width = 100% src="./slideshow1/1.jpeg">
+                    <img width = 100% src="1.jpeg">
                     <div class="img-text">
                        <p><strong>Dive Into the World of Stories</strong>
                         <br>Every book a new adventure, every page a new world.</p>
                     </div>
                 </div>
                 <div class="myslides" style="display: none;">
-                    <img width = 100% src="./slideshow1/2.jpeg">
+                    <img width = 100% src="2.jpeg">
                     <div class="img-text">
                         <p><strong>Journey Beyond Reality</strong>
                         <br>Travel to places beyond your wildest dreams.</p>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="myslides" style="display: none;">
-                    <img width = 100% src="./slideshow1/3.jpeg">
+                    <img width = 100% src="3.jpeg">
                     <div class="img-text">
                         <p><strong>Read, Imagine, Repeat</strong>
                             <br>Make reading a daily habit.</p> 
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="myslides" style="display: none;">
-                    <img width = 100% src="./slideshow1/4.jpeg">
+                    <img width = 100% src="4.jpeg">
                     <div class="img-text">
                         <p><strong>Words that Whisper to Your Soul</strong>
                             <br>Feel the depth of every written word.</p> 
@@ -129,38 +129,38 @@
     <div class="arrivals-image-container">   
         <div class="arrival-slides-ct">
             <div class="arrival-slides">
-                <img src="./New Arrivals/1.jpeg">
+                <img src="5.jpeg">
                 <P>PERCY JACKSON</P>
                 <P class="price">Ksh 1500/=</P>
             </div>
             <div class="arrival-slides">
-                <img src="./New Arrivals/2.jpeg">
+                <img src="6.jpeg">
                 <P>HARRY POTTER</P>
                 <p class="price">Ksh 1250/=</p>
             </div>
 
             <div class="arrival-slides">
-                <img src="./New Arrivals/3.jpeg">
+                <img src="7.jpeg">
                 <P>DIARY OF A WHIMPY KID
                     <p class="price">Ksh 850/=</p>
             </div>
             <div class="arrival-slides">
-                <img src="./New Arrivals/4.jpeg">
+                <img src="8.jpeg">
                 <P>VAMPIRE DIARIES</P>
                 <p class="price">Ksh 999/=</p>
             </div>
             <div class="arrival-slides">
-                <img src="./New Arrivals/5.jpeg">
+                <img src="9.jpeg">
                 <P></P>THE HUNGER GAMES</P>
                 <p class="price">Ksh 1200/=</p>
             </div>
             <div class="arrival-slides">
-                <img src="./New Arrivals/6.jpeg">
+                <img src="10.jpeg">
                 <P>GAME OF THRONES</P>
                 <p class="price">Ksh 1450/=</p>
             </div>
             <div class="arrival-slides">
-                <img src="./New Arrivals/7.jpeg">
+                <img src="11.jpeg">
                 <P>THE CHRONICLES OF NARNIA</P>
                 <p class="price">Ksh 1100/=</p>
             </div>
@@ -178,13 +178,13 @@
         <div class="top-slide-container mid-slide">
             <div class="top-slide">
                 <div class="myslides" style="display: block;">
-                    <img width = 100% src="./slideshow2/1.jpg">
+                    <img width = 100% src="12.jpg">
                     <div class="img-text">
                         <p>Ignite Your Imagination Here</p>
                     </div>
                 </div>
                 <div class="myslides" style="display: none;">
-                    <img width = 100% src="./slideshow2/2.jpg">
+                    <img width = 100% src="13.jpg">
                     <div class="img-text">
                         <p>Turn the Page to Adventure</p>
                     </div>
@@ -205,66 +205,66 @@
             <div class="cart-on" >
             <div class="arrival-slides-ct">
                 <div class="arrival-slides">
-                    <img src="./recommendations/1.JPEG">
+                    <img src="14.JPEG">
                     <P>TO KILL A MOCKINGBIRD</P>
                     <P class="price"> Ksh 1200/=</P>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/2.jpeg">
+                    <img src="15.jpeg">
                     <P>THE LITTLE WOMEN</P>
                     <p class="price">Ksh 700/=</p>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
 
                 <div class="arrival-slides">
-                    <img src="./recommendations/3.jpeg">
+                    <img src="16.jpeg">
                     <P>BECOMING</P>
                     <P class="price">Ksh 1700/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/4.jpeg">
+                    <img src="17.jpeg">
                     <P>THE CREATIVE ACT</P>
                     <P class="price">Ksh 999/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/5.jpeg">
+                    <img src="18.jpeg">
                     <P>THE HANDMAID'S TALE </P>
                     <P class="price">Ksh 1199/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/6.jpeg">
+                    <img src="19.jpeg">
                     <P>WHERE THE CRAWDADS SING</P>
                     <P class="price">Ksh 1400/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/7.jpeg">
+                    <img src="20.jpeg">
                     <P>SONG OF SOLOMON</P>
                     <P class="price">Ksh 1300/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/8.png">
+                    <img src="21.png">
                     <P>CRYING IN H MART</P>
                     <P class="price">Ksh 700/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/9.jpeg">
+                    <img src="22.jpeg">
                     <P>ULYSSES</P>
                     <P class="price">Ksh 999/=</P>
                     <div class="add-to-cart">Add to Cart</div>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/10.jpeg">
+                    <img src="23.jpeg">
                     <P>THE VANISHING HALF</P>
                     <P class="price">Ksh 1299/=</P>
                 </div>
                 <div class="arrival-slides">
-                    <img src="./recommendations/11.jpeg">
+                    <img src="24.jpeg">
                     <P>THE KITE RUNNER</P>
                     <P class="price">Ksh 1499/=</P>
                     <div class="add-to-cart">Add to Cart</div>
@@ -318,25 +318,25 @@
         <div class="arrivals-image-container">   
             <div class="arrival-slides-ct">
                 <div class="arrival-slides">
-                    <img src="./follow/1.jpg">
+                    <img src="25.jpg">
                 </div>
                 <div class="arrival-slides">
-                    <img src="./follow/2.jpg">
+                    <img src="26.jpg">
                 </div>
                 <div class="arrival-slides">
-                    <img src="./follow/3.jpg">
+                    <img src="27.jpg">
                 </div>
                 <div class="arrival-slides">
-                    <img src="./follow/4.jpg">
+                    <img src="28.jpg">
                 </div>
                 <div class="arrival-slides">
-                    <img src="./follow/1.jpg">
+                    <img src=".25.jpg">
                 </div>
                 <div class="arrival-slides">
-                    <img src="./follow/1.jpg">
+                    <img src="25.jpg">
                 </div>
                 <div class="arrival-slides">
-                    <img src="./follow/1.jpg">
+                    <img src="25.jpg">
                 </div>                
             </div>
         </div>
