--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="cart-on" >
             <div class="arrival-slides-ct">
                 <div class="arrival-slides">
-                    <img src="14.JPEG">
+                    <img src="14.jpeg">
                     <P>TO KILL A MOCKINGBIRD</P>
                     <P class="price"> Ksh 1200/=</P>
                 </div>
