--- a/index.html
+++ b/index.html
@@ -380,12 +380,13 @@
                             <a href="https://www.twitter.com" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
                             <a href="https://www.whatsapp.com" target="_blank" class="social-icon"><i class="fab fa-whatsapp"></i></a>
                             <a href="https://www.linkedin.com" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.threads.com" target="_blank" class="social-icon"><i class="fab fa-threads"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <footer>
-                <p>&copy; 2024 Your Bookstore Name. All rights reserved.</p>
+                <p>&copy; 2024 King's Boookstore. All rights reserved.</p>
                 <p><a href="/privacy-policy">Privacy Policy</a> | 
                     <a href="/terms-of-service">Terms of Service</a></p>
               </footer>
